--- a/content/posts/2020-05-01-welcome.md
+++ b/content/posts/2020-05-01-welcome.md
@@ -14,6 +14,8 @@ Below I will maintain a running list of potential topics to come:
 * Theo's intro to Biology
 * Bayesian cognition theory 
 * Random matrix theory
-* Bayesian computation/learning theory 
+* Stephen Wolfram's new physics (see [here](https://writings.stephenwolfram.com/2020/04/finally-we-may-have-a-path-to-the-fundamental-theory-of-physics-and-its-beautiful/))
+* Kevin Buzzards new proof language system [videp](https://www.youtube.com/watch?v=aZHbnQlFOn4) [site](https://leanprover.github.io/theorem_proving_in_lean/index.html)
 * Functional programming (take a look at [this website](http://learnyouahaskell.com/chapters) for an idea)
+
 
