--- a/content/posts/2020-05-01-welcome.md
+++ b/content/posts/2020-05-01-welcome.md
@@ -7,8 +7,7 @@ categories:
 slug: welcome
 ---
 
-The plan for this group is to discuss scientific ideas and theories (old and new) that match the interests of the group.
-Below I will maintain a running list of potential topics to come:
+The plan for this group is to discuss scientific ideas and theories (old and new) that match the interests of the group. I imagine it will work a bit like a reading club where everyone reads the assigned reading ahead of the discussion. Below I will maintain a running list of potential topics to come:
 
 * [Computational Evolution Theory](/post/evolution-theory-and-complexity/)
 * Theo's intro to Biology
