added first post

--- a/content/posts/2020-05-01-welcome.md
+++ b/content/posts/2020-05-01-welcome.md
@@ -9,7 +9,7 @@ slug: welcome
 
 The plan for this group is to discuss scientific ideas and theories (old and new) that match the interests of the group. I imagine it will work a bit like a reading club where everyone reads the assigned reading ahead of the discussion. Below I will maintain a running list of potential topics to come:
 
-* [Stephen Wolfram's new physics](/post/stephen-wolfram-s-new-physics/) (start with this topic?)
+* 5/16/20 [Stephen Wolfram's new physics](/post/stephen-wolfram-s-new-physics/)
 * Computational Evolution Theory
 * Theo's intro to Biology
 * Bayesian cognition theory 
