--- a/content/posts/2020-05-01-welcome.md
+++ b/content/posts/2020-05-01-welcome.md
@@ -11,9 +11,12 @@ The plan for this group is to discuss scientific ideas and theories (old and new
 
 * 5/16/20 [Stephen Wolfram's new physics](/post/stephen-wolfram-s-new-physics/)
 * 5/30/20 [MW Algorithm & Evolution Theory](/post/evolution-theory-and-complexity/)
+* Physics of Vacuum
 * Theo's intro to Biology
-* Bayesian cognition theory 
+* Godel's Incompleteness Theorems
 * Random matrix theory
+* Climate Theory
+* Bayesian cognition theory 
 * Kevin Buzzards new proof language system [videp](https://www.youtube.com/watch?v=aZHbnQlFOn4) [site](https://leanprover.github.io/theorem_proving_in_lean/index.html)
 * Functional programming (take a look at [this website](http://learnyouahaskell.com/chapters) for an idea)
 
