added a few future topics

--- a/content/posts/2020-05-01-welcome.md
+++ b/content/posts/2020-05-01-welcome.md
@@ -17,7 +17,7 @@ The plan for this group is to discuss scientific ideas and theories (old and new
 * Random matrix theory
 * Climate Theory
 * Bayesian cognition theory 
-* Kevin Buzzards new proof language system [videp](https://www.youtube.com/watch?v=aZHbnQlFOn4) [site](https://leanprover.github.io/theorem_proving_in_lean/index.html)
+* Kevin Buzzards new proof language system 
 * Functional programming (take a look at [this website](http://learnyouahaskell.com/chapters) for an idea)
 
 
