added a new topic

--- a/content/posts/2020-05-01-welcome.md
+++ b/content/posts/2020-05-01-welcome.md
@@ -19,5 +19,6 @@ The plan for this group is to discuss scientific ideas and theories (old and new
 * Bayesian cognition theory 
 * Kevin Buzzards new proof language system 
 * Functional programming (take a look at [this website](http://learnyouahaskell.com/chapters) for an idea)
+* Simulated Annealing Algorithm
 
 
